# secbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  Secbox.slnx
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BRIDGE_PROTOCOL.md  THREAT_MODEL.md
src/Secbox.Cli/: Program.cs  Secbox.Cli.csproj
src/Secbox.Contracts/: BridgeProtocol.cs  Decision.cs  Finding.cs  IDecisionEngine.cs  IFinder.cs  IFindingSink.cs  IPipeline.cs  IRulePack.cs  Policy.cs  Rule.cs  RulePackInfo.cs  ScanContext.cs  ScanOptions.cs  ScanReport.cs  ScanTarget.cs  Severity.cs
src/Secbox.Core/: ApiInfo.cs  Bootstrap.cs  Secbox.Core.csproj  SecboxApi.cs
src/Secbox.Core/Profiler/: ProfilerCoordinator.cs  ProfilerHashes.cs
src/Secbox.Core/RuntimeSensors/: AttributedFinding.cs  CallAttributionRing.cs  EventCorrelator.cs  ISensor.cs  ManagedCallTrustStore.cs  SensorEvent.cs  SensorRegistry.cs
src/Secbox.Core/RuntimeSensors/Sensors/: EtwSensor.cs  ManagedCallSensor.cs  ProfilerSensor.cs
src/Secbox.Core/RuntimeSensors/Sinks/: IOutputSink.cs  JsonLineSink.cs
src/Secbox.Profiler/: CMakeLists.txt
src/Secbox.Profiler/include/: event_ring.h  profiler.h
src/Secbox.Profiler/scripts/: fetch-coreclr-headers.ps1
src/Secbox.Profiler/src/: callback_bridge.cpp  dllmain.cpp  event_ring.cpp  profiler.cpp
src/Secbox.Rules/: EngineMirror.cs  EngineMirrorData.cs  RuleSet.cs  Secbox.Rules.csproj
src/Secbox.Rules/Packs/: CriticalPack.cs  NativeBinaryPack.cs  PackRegistry.cs
src/Secbox.Scanner/: Secbox.Scanner.csproj
src/Secbox.Scanner/Finders/: CompiledPack.cs  IlFinder.cs  MemberKey.cs  MetadataFinder.cs  NativeBinaryFinder.cs  SourceFinder.cs
src/Secbox.Scanner/Pipeline/: DefaultDecisionEngine.cs  FinderRegistry.cs  FindingDeduper.cs  ScanPipeline.cs
src/Secbox.Sentinel.AlertUI/: AlertDecision.cs  AlertWindow.xaml  AlertWindow.xaml.cs  App.xaml  App.xaml.cs  Secbox.Sentinel.AlertUI.csproj  app.manifest
src/Secbox.Sentinel.Client/: ClientStatus.cs  ReconnectPolicy.cs  Secbox.Sentinel.Client.csproj  SentinelClient.cs
src/Secbox.Sentinel.Contracts/: EnvelopeJson.cs  EventEnvelope.cs  KernelEvent.cs  KernelEventKind.cs  ProviderKind.cs  SentinelProtocol.cs
src/Secbox.Sentinel.Engine/: EngineHost.cs  Secbox.Sentinel.Engine.csproj
src/Secbox.Sentinel.Engine/Collection/: EtwCollector.cs  FileProvider.cs  IKernelProvider.cs  ImageLoadProvider.cs  NetworkProvider.cs  ProcessProvider.cs  RegistryProvider.cs
src/Secbox.Sentinel.Engine/Policy/: DefaultKernelMatcher.cs  IKernelRuleMatcher.cs  NoiseFilter.cs  ProcessTree.cs  Subscription.cs  SubscriptionRegistry.cs
src/Secbox.Sentinel.Service/: Program.cs  Secbox.Sentinel.Service.csproj  SentinelWorker.cs
src/Secbox.Sentinel.Service/Alerts/: AlertSpawner.cs
src/Secbox.Sentinel.Service/Pipe/: ClientAuthenticator.cs  PipeClientSession.cs  PipeServer.cs
src/Secbox.Sentinel.Setup/: Package.wxs  Secbox.Sentinel.Setup.wixproj
